# nlp_demo

./: Cargo.toml  index.html
src/: lib.rs  main.rs
src/components/atoms/: mod.rs  multiline_text_input.rs
src/components/molecules/: blurb.rs  button_bar.rs  mod.rs  prefill_multiline_text_input_form.rs
src/components/organisms/: api.rs  dark_theme.css  mod.rs  text_submission_demo.rs
src/components/pages/: dark_theme.css  mod.rs  occ_demo.rs
