[package]
name = "nlp_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.6.1"
gloo-net = "0.2"
serde = "1.0.136"
serde_json = "1.0.79"
stylist = {version = "0.11", features = ["yew", "parser"]}
yew = { version = "0.20", features = ["csr"]}
wasm-bindgen = "0.2.79"
web-sys = {version = "0.3.56", features = ["HtmlInputElement"]}
wasm-bindgen-futures = "0.4.29"